change button and border style and newsletter input color

--- a/about.html
+++ b/about.html
@@ -121,7 +121,9 @@
         <form action="submit">
           <p>Newsletter</p>
           <input type="email" placeholder="Your Email" class="d-block" />
-          <button class="d-block w-100">Subscribe to newsletter.</button>
+          <button class="d-block w-100 btn btn-outline-light">
+            Subscribe to newsletter.
+          </button>
         </form>
       </section>
 
