--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,10 @@
           rows="3"
         ></textarea>
       </div>
-      <button type="button" class="btn btn-primary align-self-center mb-5">
+      <button
+        type="button"
+        class="btn btn-outline-primary align-self-center mb-5"
+      >
         Submit
       </button>
     </main>
@@ -118,8 +121,14 @@
 
         <form action="submit">
           <p>Newsletter</p>
-          <input type="email" placeholder="Your Email" class="d-block" />
-          <button class="d-block w-100">Subscribe to newsletter.</button>
+          <input
+            type="email"
+            placeholder="Your Email"
+            class="d-block form-label"
+          />
+          <button class="d-block w-100 btn btn-outline-light">
+            Subscribe to newsletter.
+          </button>
         </form>
       </section>
 
