--- a/service.html
+++ b/service.html
@@ -30,16 +30,18 @@
         <div class="card my-4 p-5" style="width: auto">
           <img
             src="images/web-design.png"
-            class="card-img-top"
+            class="card-img-top mx-auto"
             alt="web-design"
           />
           <div class="card-body">
-            <h5 class="card-title">WEB DESIGN</h5>
+            <h5 class="card-title text-center">WEB DESIGN</h5>
+            <hr>
             <ul>
               <li>Figma</li>
               <li>Photoshop</li>
               <li>Canva</li>
             </ul>
+            <hr>
             <p class="card-text">
               Want to create captivating websites with appealing visuals and
               good functionality? Let us create an attractive, and effective
@@ -53,17 +55,19 @@
         <div class="card my-4 p-5" style="width: auto">
           <img
             src="images/web-development.png"
-            class="card-img-top"
+            class="card-img-top mx-auto"
             alt="web-design"
           />
           <div class="card-body">
-            <h5 class="card-title">FRONT-END DEVELOPMENTN</h5>
+            <h5 class="card-title text-center">FRONT-END DEVELOPMENTN</h5>
+            <hr>
             <ul>
               <li>HTML</li>
               <li>CSS</li>
               <li>Javascript</li>
               <li>Bootstrap</li>
             </ul>
+            <hr>
             <p class="card-text">
               Want to turn concepts into dynamic and interactive online reality?
               With skills in front-end and problem solving skills, Let us create
@@ -139,7 +143,7 @@
         <form action="submit">
           <p>Newsletter</p>
           <input type="email" placeholder="Your Email" class="d-block" />
-          <button class="d-block w-100">Subscribe to newsletter.</button>
+          <button class="d-block w-100 btn btn-outline-light">Subscribe to newsletter.</button>
         </form>
       </section>
 
