--- a/about.html
+++ b/about.html
@@ -11,7 +11,9 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <header>
       <div class="d-flex justify-content-between mx-5 my-3">
-        <a href="#"><img src="images/my-logo.png" alt="logo" id="logo" /></a>
+        <a href="index.html"
+          ><img src="images/my-logo.png" alt="logo" id="logo"
+        /></a>
 
         <nav>
           <a href="index.html">HOME</a>
