background and project section padding

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
       </div>
     </header>
 
-    <main class="display container my-5" id="projects">
+    <main class="display container my-5 p-5" id="projects">
       <h1>PROJECTS</h1>
       <div class="flow">
         <div class="sample-work">
