--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         /></a>
 
         <nav>
+          <p class="text-end"><img src="images/nav.png" alt="" /></p>
           <a href="index.html">HOME</a>
           <a href="about.html">ABOUT</a>
           <a href="service.html"> SERVICE </a>
