added nav to all pages

--- a/service.html
+++ b/service.html
@@ -14,6 +14,7 @@
         <a href="index.html"><img src="images/my-logo.png" alt="logo" id="logo" /></a>
 
         <nav>
+          <p class="text-end"><img src="images/nav.png" alt="" /></p>
           <a href="index.html">HOME</a>
           <a href="about.html">ABOUT</a>
           <a href="service.html"> SERVICE </a>
