--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <script src="js/bootstrap.bundle.min.js"></script>
     <header>
-      <div class="d-flex justify-content-between mx-5 my-2" id="nav">
+      <div class="d-flex justify-content-between mx-5 my-3">
         <a href="index.html"
           ><img src="images/my-logo.png" alt="logo" id="logo"
         /></a>
