fixed nav and styling

--- a/about.html
+++ b/about.html
@@ -6,17 +6,18 @@
     <title>About</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="./images/my-logo.png" type="image/x-icon" />
   </head>
   <body>
     <script src="js/bootstrap.bundle.min.js"></script>
     <header>
-      <div class="d-flex justify-content-between mx-5 my-3">
+      <div class="d-flex justify-content-between mx-5">
         <a href="index.html"
           ><img src="images/my-logo.png" alt="logo" id="logo"
         /></a>
 
         <nav>
-          <p class="text-end"><img src="images/nav.png" alt="" /></p>
+          <img src="images/nav.png" alt="" />
           <a href="index.html">HOME</a>
           <a href="about.html">ABOUT</a>
           <a href="service.html"> SERVICE </a>
@@ -26,17 +27,17 @@
       </div>
     </header>
 
-    <main class="display container my-5" id="about">
-      <h1 class="m-5">About Me</h1>
+    <main class="container my-5 main" id="about">
+      <h1 class="my-4 mx-5">About Me</h1>
 
-      <p class="m-5">
+      <p class="my-3 mx-5">
         Hello! As a start up Web Developer, I am passionate and innovative with
         a knack for crafting stunning digital experiences. I am new to web
         development but I am sure to deliver quality works for creating
         wonderful websites.
       </p>
 
-      <p class="m-5">
+      <p class="my-3 mx-5">
         My journey into the world of web development is still just starting but
         it sure is a pleasure to work and create lines of code and into visually
         appealing and functional websites. I've honed my skills in HTML, CSS,
@@ -45,7 +46,7 @@
         them with an intuitive and seamless navigation experience.
       </p>
 
-      <p class="m-5">
+      <p class="my-3 mx-5">
         What sets me apart is my commitment to combining creativity and
         technical prowess to solve real-world problems. I thrive in
         collaborative environments, where I've had the pleasure of working with
@@ -54,7 +55,7 @@
         undertake.
       </p>
 
-      <p class="m-5">
+      <p class="my-3 mx-5">
         Thank you for visiting my portfolio, and I look forward to connecting
         with you!
       </p>
@@ -123,7 +124,7 @@
 
         <form action="submit">
           <p>Newsletter</p>
-          <input type="email" placeholder="Your Email" class="d-block" />
+          <input type="email" placeholder="Your Email" class="d-block mb-2" />
           <button class="d-block w-100 btn btn-outline-light">
             Subscribe to newsletter.
           </button>
