--- a/projects.html
+++ b/projects.html
@@ -6,17 +6,18 @@
     <title>Projects</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="./images/my-logo.png" type="image/x-icon" />
   </head>
   <body>
     <script src="js/bootstrap.bundle.min.js"></script>
     <header>
-      <div class="d-flex justify-content-between mx-5 my-3">
+      <div class="d-flex justify-content-between mx-5">
         <a href="index.html"
           ><img src="images/my-logo.png" alt="logo" id="logo"
         /></a>
 
         <nav>
-          <p class="text-end"><img src="images/nav.png" alt="" /></p>
+          <img src="images/nav.png" alt="" />
           <a href="index.html">HOME</a>
           <a href="about.html">ABOUT</a>
           <a href="service.html"> SERVICE </a>
@@ -26,7 +27,7 @@
       </div>
     </header>
 
-    <main class="display container my-5 p-5" id="projects">
+    <main class="container my-5 p-5 main" id="projects">
       <h1>PROJECTS</h1>
       <div class="flow">
         <div class="sample-work">
@@ -126,7 +127,7 @@
 
         <form action="submit">
           <p>Newsletter</p>
-          <input type="email" placeholder="Your Email" class="d-block" />
+          <input type="email" placeholder="Your Email" class="d-block mb-2" />
           <button class="d-block w-100 btn btn-outline-light">
             Subscribe to newsletter.
           </button>
