--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         /></a>
 
         <nav>
-          <img src="images/nav.png" alt="" class="mb-2" />
+          <img src="images/nav.png" alt="" />
           <a href="index.html">HOME</a>
           <a href="about.html">ABOUT</a>
           <a href="service.html"> SERVICE </a>
