service card col fix

--- a/service.html
+++ b/service.html
@@ -31,7 +31,7 @@
       <h1 class="mt-5">SERVICE</h1>
 
       <div class="service-content row align-items-stretch">
-        <div class="col-6">
+        <div class="col-md-6 col-xs-12">
           <div class="card h-100 my-4 p-5 card-bg">
             <img
               src="images/web-design.png"
@@ -58,7 +58,7 @@
           </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-md-6 col-xs-12">
           <div class="card h-100 my-4 p-5 card-bg">
             <img
               src="images/web-development.png"
