added padding to service card

--- a/service.html
+++ b/service.html
@@ -31,7 +31,7 @@
       <h1 class="mt-5">SERVICE</h1>
 
       <div class="service-content row align-items-stretch">
-        <div class="col-md-6 col-xs-12">
+        <div class="col-md-6 col-xs-12 pb-4">
           <div class="card h-100 my-4 p-5 card-bg">
             <img
               src="images/web-design.png"
